--- a/app/styles/components/_section.scss
+++ b/app/styles/components/_section.scss
@@ -55,7 +55,7 @@
 				overflow: hidden;
 				margin-bottom: 1rem;
 				border-radius: 5px;
-				&.timeline--text {
+				&.twitter {
 					position: relative;
 					.text__body { 
 						padding: rem(25) rem(19); 
@@ -76,9 +76,29 @@
 						.fa-twitter { color: $blue-twitter; }
 					}
 				}
-				img {
-					height: 100%;
-					margin: 0 auto;
+				&.instagram {
+					position: relative;
+					img {
+						width: 100%;
+					}
+					.text {
+						padding: rem(25) rem(19); 
+						background: rgba(0, 0, 0, .35); 
+						color: $grey8;
+						position: absolute;
+						max-height: 100%;
+						height: 100%;
+						width: 100%;
+						overflow-y: auto;
+						opacity: 0;
+						z-index: 1;
+					}
+					img, .text { transition: all 350ms ease; }
+					&:hover, &:focus { 
+						img { transform: scale(1.05); }
+						.text { opacity: 1; }
+					}
+
 				}
 			}
 		}
