[MAJOR] add twitter integration bekend php-scripts

--- a/app/nunjucks/partials/footer.njk
+++ b/app/nunjucks/partials/footer.njk
@@ -9,7 +9,7 @@
 	    		<div class="container__inner">
 					<div class="timeline-container">
 		 				
-						<div class="timeline twitter">
+			<!-- 			<div class="timeline twitter">
 						 	<div class="text__body">Ciri-ciri dari sebuah desain yang baik adalah, memiliki tujuan yang jelas dan pemahaman yang kuat.
 						 	</div>
 					 		<a href="#" class="text__footer">view on twitter <i class="fa fa-twitter pull-right"></i></a>
@@ -18,7 +18,7 @@
 						 	<div class="text__body">Having data-driven mindset is one of the key ingredients in successful design! Have a good day guys! #designbetter #insight #insightips #ui #ux
 						 	</div>
 					 		<a href="#" class="text__footer">view on twitter <i class="fa fa-twitter pull-right"></i></a>
-						</div>
+						</div> -->
 						<!-- <div class="timeline">
 						 	<img src="images/foto2.jpg" alt="Timeline's image">
 						</div> -->
