[minor] add svg

--- a/app/about.njk
+++ b/app/about.njk
@@ -21,7 +21,7 @@
 		        <div class=" col-sm-12 m-t-1">
 			        <div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/problem.png" class="img-responsive center-block">
+					   		<img src="images/problem.svg" class="img-responsive center-block">
 					  	</div>
 					  	<div class="item__text">
 					   		Got Problem
@@ -30,7 +30,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/mobile.png" class="img-responsive">
+					   		<img src="images/mobile.svg" class="img-responsive">
 					  	</div>
 					  	<div class="item__text">
 					  		Research and Understand
@@ -39,7 +39,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/product.png" class="img-responsive">
+					   		<img src="images/product.svg" class="img-responsive">
 					  	</div>
 					  	<div class="item__text">
 					  		Design & Develop the Solution
@@ -48,7 +48,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/checkmark.png" class="img-responsive">
+					   		<img src="images/check.svg" class="img-responsive">
 					  	</div>
 					  	<div class="item__text">
 					   		Validation
@@ -79,8 +79,8 @@
 						  		Co-Founder, Business and Product Development
 						  	</p>
 						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.png" alt="Ajeng's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.png" alt="Ajeng's Linkedin"></a>
+						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Ajeng's Twitter"></a>
+						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Ajeng's Linkedin"></a>
 						  	</div>
 						</div>
 					</div>
@@ -96,8 +96,8 @@
 						  		Co-Founder, Creative Director
 						  	</p>
 						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.png" alt="Afnizar's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.png" alt="Afnizar's Linkedin"></a>
+						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Afnizar's Twitter"></a>
+						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Afnizar's Linkedin"></a>
 						  	</div>
 					  	</div>
 					</div>
@@ -113,8 +113,8 @@
 						  		Co-Founder, Business and Product Development
 						  	</p>
 						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.png" alt="Febry's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.png" alt="Febry's Linkedin"></a>
+						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
+						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Febry's Linkedin"></a>
 						  	</div>
 						</div>
 					</div>
@@ -130,8 +130,8 @@
 						  		VP Engineering
 						  	</p>
 						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.png" alt="Kukuh's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.png" alt="Kukuh's Linkedin"></a>
+						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Kukuh's Twitter"></a>
+						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Kukuh's Linkedin"></a>
 						  	</div>
 						</div>
 					</div>
@@ -147,8 +147,8 @@
 						  		UI/UX Strategist
 						  	</p>
 						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.png" alt="Rike's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.png" alt="Rike's Linkedin"></a>
+						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Rike's Twitter"></a>
+						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Rike's Linkedin"></a>
 						  	</div>
 						</div>
 					</div>
@@ -164,8 +164,8 @@
 						  		Chief Technology Officer
 						  	</p>
 						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.png" alt="Setyo's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.png" alt="Setyo's Linkedin"></a>
+						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Setyo's Twitter"></a>
+						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Setyo's Linkedin"></a>
 						  	</div>
 						</div>
 					</div>
