--- a/app/index.njk
+++ b/app/index.njk
@@ -63,7 +63,7 @@
 		        <div class=" col-sm-12 m-t-2 m-b-2">
 			        <div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/web.png" class="img-responsive center-block" alt="Web Development">
+					   		<img src="images/web.svg" class="img-responsive center-block" alt="Web Development">
 					  	</div>
 					  	<div class="item__text">
 					   		Web Development
@@ -71,7 +71,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/mobile.png" class="img-responsive" alt="Mobile Application Development">
+					   		<img src="images/mobile.svg" class="img-responsive" alt="Mobile Application Development">
 					  	</div>
 					  	<div class="item__text">
 					   		Mobile Application Development
@@ -79,7 +79,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/product.png" class="img-responsive" alt="Product Design">
+					   		<img src="images/product.svg" class="img-responsive" alt="Product Design">
 					  	</div>
 					  	<div class="item__text">
 					   		Product Design
@@ -87,7 +87,7 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
 						<div class="item__img-wrapper circle">
-					   		<img src="images/workshop.png" class="img-responsive" alt="Workshop & Seminar">
+					   		<img src="images/workshop.svg" class="img-responsive" alt="Workshop & Seminar">
 					  	</div>
 					  	<div class="item__text">
 					   		Workshop & Seminar
