--- a/app/services.njk
+++ b/app/services.njk
@@ -20,7 +20,7 @@
 			    	<div class="items media">
 					  	<div class="media-left">
 							<div class="item__img-wrapper circle">
-						   		<img src="images/web.png" class="img-responsive" alt="Web Development">
+						   		<img src="images/web.svg" class="img-responsive" alt="Web Development">
 						  	</div>
 					  	</div>
 					  	<div class="media-body">
@@ -33,7 +33,7 @@
 			    	<div class="items media">
 					  	<div class="media-left">
 							<div class="item__img-wrapper circle">
-						   		<img src="images/mobile.png" class="img-responsive" alt="Mobile Application Development">
+						   		<img src="images/mobile.svg" class="img-responsive" alt="Mobile Application Development">
 						  	</div>
 					  	</div>
 					  	<div class="media-body">
@@ -46,7 +46,7 @@
 			    	<div class="items media">
 					  	<div class="media-left">
 							<div class="item__img-wrapper circle">
-						   		<img src="images/product.png" class="img-responsive" alt="Product Design">
+						   		<img src="images/product.svg" class="img-responsive" alt="Product Design">
 						  	</div>
 					  	</div>
 					  	<div class="media-body">
@@ -59,7 +59,7 @@
 			    	<div class="items media">
 					  	<div class="media-left">
 							<div class="item__img-wrapper circle">
-						   		<img src="images/workshop.png" class="img-responsive" alt="Workshop & Seminar">
+						   		<img src="images/workshop.svg" class="img-responsive" alt="Workshop & Seminar">
 						  	</div>
 					  	</div>
 					  	<div class="media-body">
