[MAJOR] update svg

--- a/app/about.njk
+++ b/app/about.njk
@@ -3,185 +3,186 @@
     {% import "nunjucks/partials/navbar.njk" as navbar %}
 	{{ navbar.activePage('about') }}
 
-    <div class="container-fluid main-container">
-      	<div class="row section section--banner transparent text-center">
-      		<div class="container">
-	      		<div class="col-md-10 col-md-offset-1">	
-			      	<h1 class="heading">Who are we?</h1>
-			        <h6 class="text">
-			        	We are team that solve problems by design. We solve problems and develop products using methods UX Driven Development, which is developing a product that adopts what is required by the user so that the product offered is more appropriate and well targeted. Our team have extraordinary members and also steps in solving your problem
+	    <div class="container-fluid main-container">
+	      	<div class="row section section--banner transparent text-center">
+	      		<div class="container">
+		      		<div class="col-md-10 col-md-offset-1">	
+				      	<h1 class="heading">Who are we?</h1>
+				        <h6 class="text">
+				        	We are team that solve problems by design. We solve problems and develop products using methods UX Driven Development, which is developing a product that adopts what is required by the user so that the product offered is more appropriate and well targeted. Our team have extraordinary members and also steps in solving your problem
+				        </h6>
+			        </div>
+		        </div>
+	      	</div>
+	    	<div class="row section section--services text-center border-b-grey">
+	    		<div class="container">
+			        <h4 class="heading">Our Process</h4>
+			        <div class="clearfix"></div>
+			        <div class=" col-sm-12 m-t-1">
+				        <div class="col-sm-6 col-md-3 text-center m-b-2 items">
+							<div class="item__img-wrapper circle">
+						   		<img src="images/problem.svg" class="img-responsive center-block">
+						  	</div>
+						  	<div class="item__text">
+						   		Got Problem
+						  	</div>
+						  	<p class="item__sub-text">Always start by a problem</p>
+						</div>
+						<div class="col-sm-6 col-md-3 text-center m-b-2 items">
+							<div class="item__img-wrapper circle">
+						   		<img src="images/mobile.svg" class="img-responsive">
+						  	</div>
+						  	<div class="item__text">
+						  		Research and Understand
+						  	</div>
+						  	<p class="item__sub-text">We understand the target users and the business process by research the problem.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 text-center m-b-2 items">
+							<div class="item__img-wrapper circle">
+						   		<img src="images/product.svg" class="img-responsive">
+						  	</div>
+						  	<div class="item__text">
+						  		Design & Develop the Solution
+						  	</div>
+						  	<p class="item__sub-text">From research, we design and develop the solution, including the information structure, workflow, and application.</p>
+						</div>
+						<div class="col-sm-6 col-md-3 text-center m-b-2 items">
+							<div class="item__img-wrapper circle">
+						   		<img src="images/check.svg" class="img-responsive">
+						  	</div>
+						  	<div class="item__text">
+						   		Validation
+						  	</div>
+						  	<p class="item__sub-text">Users evaluate the design solution and use the findings to iterate continuosly to optimize our design solutions.</p>
+						</div>
+					</div>
+		        </div>
+	    	</div>
+		    <div class="row section section--team-head text-center">
+	    		<div class="container">
+			        <h4 class="heading">Meet our super team</h4>
+			        <div class="clearfix"></div>
+				</div>
+			</div>
+		    <div class="row section section--team transparent text-center">
+	    		<div class="container">
+			        <div class="team__container clearfix">
+				        <div class="col-sm-6 col-md-4 text-center m-b-2 items">
+							<div class="item__img-wrapper">
+						   		<img src="images/gif5.gif" alt="Photo of Diah Ajeng" class="">
+						  	</div>
+						  	<div class="text-wrapper">
+							  	<p class="item__text">
+							   		Diah Ajeng
+							  	</p>
+							  	<p class="item__sub-text">
+							  		Co-Founder, Business and Product Development
+							  	</p>
+							  	<div class="item__social-link">
+							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Ajeng's Twitter"></a>
+							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Ajeng's Linkedin"></a>
+							  	</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 text-center m-b-2 items">
+							<div class="item__img-wrapper">
+						   		<img src="images/gif1.gif" alt="Photo of Afnizar Nur Ghifari" class="">
+						  	</div>
+						  	<div class="text-wrapper">
+						  		<p class="item__text">
+							   		Afnizar Nur Ghifari
+							  	</p>
+							  	<p class="item__sub-text">
+							  		Co-Founder, Creative Director
+							  	</p>
+							  	<div class="item__social-link">
+							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Afnizar's Twitter"></a>
+							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Afnizar's Linkedin"></a>
+							  	</div>
+						  	</div>
+						</div>
+						<div class="col-sm-6 col-md-4 text-center m-b-2 items">
+							<div class="item__img-wrapper">
+						   		<img src="images/gif4.gif" alt="Photo of Febry Ghaisani" class="">
+						  	</div>
+						  	<div class="text-wrapper">
+							  	<p class="item__text">
+							   		Febry Ghaisani
+							  	</p>
+							  	<p class="item__sub-text">
+							  		Co-Founder, Business and Product Development
+							  	</p>
+							  	<div class="item__social-link">
+							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
+							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Febry's Linkedin"></a>
+							  	</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 text-center m-b-2 items">
+							<div class="item__img-wrapper">
+						   		<img src="images/gif2.gif" alt="Photo of Kukuh Aji Sulistyo" class="">
+						  	</div>
+						  	<div class="text-wrapper">
+							  	<p class="item__text">
+							   		Kukuh Aji Sulistyo
+							  	</p>
+							  	<p class="item__sub-text">
+							  		VP Engineering
+							  	</p>
+							  	<div class="item__social-link">
+							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Kukuh's Twitter"></a>
+							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Kukuh's Linkedin"></a>
+							  	</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 text-center m-b-2 items">
+							<div class="item__img-wrapper">
+						   		<img src="images/gif6.gif" alt="Photo of Rike Adelia" class="">
+						  	</div>
+						  	<div class="text-wrapper">
+							  	<p class="item__text">
+							   		Rike Adelia
+							  	</p>
+							  	<p class="item__sub-text">
+							  		UI/UX Strategist
+							  	</p>
+							  	<div class="item__social-link">
+							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Rike's Twitter"></a>
+							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Rike's Linkedin"></a>
+							  	</div>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-4 text-center m-b-2 items">
+							<div class="item__img-wrapper">
+						   		<img src="images/gif3.gif" alt="Photo of Setyo Nugroho" class="">
+						  	</div>
+						  	<div class="text-wrapper">
+							  	<p class="item__text">
+							   		Setyo Nugroho
+							  	</p>
+							  	<p class="item__sub-text">
+							  		Chief Technology Officer
+							  	</p>
+							  	<div class="item__social-link">
+							  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Setyo's Twitter"></a>
+							  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Setyo's Linkedin"></a>
+							  	</div>
+							</div>
+						</div>
+					</div>
+		        </div>
+		    </div>
+		    <div class="row section section--team-join text-center border-b-grey">
+	    		<div class="container">
+			        <h4 class="heading text-left">Join our team!</h4>
+			        <h6 class="text m-b-2 col-sm-12 text-left">
+			        	Do you like teaching or learning or both ? Want to have more experience? Let’s join us!. Let us know about you by <a href="mailto:dreamakasa@gmail.com">email</a> and introduce yourself!
 			        </h6>
 		        </div>
-	        </div>
-      	</div>
-    	<div class="row section section--services text-center border-b-grey">
-    		<div class="container">
-		        <h4 class="heading">Our Process</h4>
-		        <div class="clearfix"></div>
-		        <div class=" col-sm-12 m-t-1">
-			        <div class="col-sm-6 col-md-3 text-center m-b-2 items">
-						<div class="item__img-wrapper circle">
-					   		<img src="images/problem.svg" class="img-responsive center-block">
-					  	</div>
-					  	<div class="item__text">
-					   		Got Problem
-					  	</div>
-					  	<p class="item__sub-text">Always start by a problem</p>
-					</div>
-					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
-						<div class="item__img-wrapper circle">
-					   		<img src="images/mobile.svg" class="img-responsive">
-					  	</div>
-					  	<div class="item__text">
-					  		Research and Understand
-					  	</div>
-					  	<p class="item__sub-text">We understand the target users and the business process by research the problem.</p>
-					</div>
-					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
-						<div class="item__img-wrapper circle">
-					   		<img src="images/product.svg" class="img-responsive">
-					  	</div>
-					  	<div class="item__text">
-					  		Design & Develop the Solution
-					  	</div>
-					  	<p class="item__sub-text">From research, we design and develop the solution, including the information structure, workflow, and application.</p>
-					</div>
-					<div class="col-sm-6 col-md-3 text-center m-b-2 items">
-						<div class="item__img-wrapper circle">
-					   		<img src="images/check.svg" class="img-responsive">
-					  	</div>
-					  	<div class="item__text">
-					   		Validation
-					  	</div>
-					  	<p class="item__sub-text">Users evaluate the design solution and use the findings to iterate continuosly to optimize our design solutions.</p>
-					</div>
-				</div>
-	        </div>
-    	</div>
-	    <div class="row section section--team-head text-center">
-    		<div class="container">
-		        <h4 class="heading">Meet our super team</h4>
-		        <div class="clearfix"></div>
-			</div>
-		</div>
-	    <div class="row section section--team transparent text-center">
-    		<div class="container">
-		        <div class="team__container clearfix">
-			        <div class="col-sm-6 col-md-4 text-center m-b-2 items">
-						<div class="item__img-wrapper">
-					   		<img src="images/gif5.gif" alt="Photo of Diah Ajeng" class="">
-					  	</div>
-					  	<div class="text-wrapper">
-						  	<p class="item__text">
-						   		Diah Ajeng
-						  	</p>
-						  	<p class="item__sub-text">
-						  		Co-Founder, Business and Product Development
-						  	</p>
-						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Ajeng's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Ajeng's Linkedin"></a>
-						  	</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 text-center m-b-2 items">
-						<div class="item__img-wrapper">
-					   		<img src="images/gif1.gif" alt="Photo of Afnizar Nur Ghifari" class="">
-					  	</div>
-					  	<div class="text-wrapper">
-					  		<p class="item__text">
-						   		Afnizar Nur Ghifari
-						  	</p>
-						  	<p class="item__sub-text">
-						  		Co-Founder, Creative Director
-						  	</p>
-						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Afnizar's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Afnizar's Linkedin"></a>
-						  	</div>
-					  	</div>
-					</div>
-					<div class="col-sm-6 col-md-4 text-center m-b-2 items">
-						<div class="item__img-wrapper">
-					   		<img src="images/gif4.gif" alt="Photo of Febry Ghaisani" class="">
-					  	</div>
-					  	<div class="text-wrapper">
-						  	<p class="item__text">
-						   		Febry Ghaisani
-						  	</p>
-						  	<p class="item__sub-text">
-						  		Co-Founder, Business and Product Development
-						  	</p>
-						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Febry's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Febry's Linkedin"></a>
-						  	</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 text-center m-b-2 items">
-						<div class="item__img-wrapper">
-					   		<img src="images/gif2.gif" alt="Photo of Kukuh Aji Sulistyo" class="">
-					  	</div>
-					  	<div class="text-wrapper">
-						  	<p class="item__text">
-						   		Kukuh Aji Sulistyo
-						  	</p>
-						  	<p class="item__sub-text">
-						  		VP Engineering
-						  	</p>
-						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Kukuh's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Kukuh's Linkedin"></a>
-						  	</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 text-center m-b-2 items">
-						<div class="item__img-wrapper">
-					   		<img src="images/gif6.gif" alt="Photo of Rike Adelia" class="">
-					  	</div>
-					  	<div class="text-wrapper">
-						  	<p class="item__text">
-						   		Rike Adelia
-						  	</p>
-						  	<p class="item__sub-text">
-						  		UI/UX Strategist
-						  	</p>
-						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Rike's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Rike's Linkedin"></a>
-						  	</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-4 text-center m-b-2 items">
-						<div class="item__img-wrapper">
-					   		<img src="images/gif3.gif" alt="Photo of Setyo Nugroho" class="">
-					  	</div>
-					  	<div class="text-wrapper">
-						  	<p class="item__text">
-						   		Setyo Nugroho
-						  	</p>
-						  	<p class="item__sub-text">
-						  		Chief Technology Officer
-						  	</p>
-						  	<div class="item__social-link">
-						  		<a href="https://twitter.com"><img src="images/twitter.svg" alt="Setyo's Twitter"></a>
-						  		<a href="https://twitter.com"><img src="images/linkedin.svg" alt="Setyo's Linkedin"></a>
-						  	</div>
-						</div>
-					</div>
-				</div>
-	        </div>
-	    </div>
-	    <div class="row section section--team-join text-center border-b-grey">
-    		<div class="container">
-		        <h4 class="heading text-left">Join our team!</h4>
-		        <h6 class="text m-b-2 col-sm-12 text-left">
-		        	Do you like teaching or learning or both ? Want to have more experience? Let’s join us!. Let us know about you by <a href="mailto:dreamakasa@gmail.com">email</a> and introduce yourself!
-		        </h6>
-	        </div>
-    	</div>
+	    	</div>
 
-    {%- include "nunjucks/partials/footer.njk" %}
+	    {%- include "nunjucks/partials/footer.njk" %}
+
+    	</div> <!-- /.main-container -->
+    		
 	{% endblock %}
-
-    </div> 
