Refactor some code

--- a/app/index.njk
+++ b/app/index.njk
@@ -6,7 +6,7 @@
 	    <div class="container-fluid main-container" id="index-page">
 	      	<div class="row section section--banner transparent p-b-0">
 	      		<div class="container text-center">
-		      		<div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">	
+		      		<div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 				        <h1 class="heading">May we help you?</h1>
 				        <h6 class="text m-b-2">
 				        	We help companies to build applications, products, and services from design to development with solution-by-design and human-centered approach.
@@ -20,7 +20,7 @@
 	    	</div>
 	    	<div class="row section transparent">
 	    		<div class="container">
-		        	<div class="col-xs-12">	
+		        	<div class="col-xs-12">
 				        <a href="#" class="hunk hunk--small hunk--left">
 				        	<div class="hunk__inner">
 					        	<img src="images/aslan.png" class="hunk__img" alt="Application Aslan">
@@ -53,7 +53,7 @@
 		    </div>
 	    	<div class="row section section--services text-center border-b-grey">
 		    	<div class="container">
-		      		<div class="col-sm-10 col-sm-offset-1">	
+		      		<div class="col-sm-10 col-sm-offset-1">
 				        <h4 class="heading">Services</h4>
 				        <h6 class="text m-b-2">
 				        	Deliver great services is our main priority. User experience is our resource and design is our way to build user-centered products
@@ -132,20 +132,20 @@
 		    </div>
 	    	<div class="row section section--quotes text-center border-b-grey" id="indexQuotes">
 	    		<div class="container">
-		      		<div class="col-sm-12">	
+		      		<div class="col-sm-12">
 				        <blockquote>
-				        	Untuk mengembangkan produk, diperlukan adanya proses yang cukup panjang dan jaminan kualitas yang bagus merupakan standar utama dari pengembangan produk kami.
+				        	Quote
 				        </blockquote>
 				        <p class="profil">
 					        <img src="images/avatar.png">
-				        	Kukuh Sulistyo, Dream Akasa – VP Engineering
+				        	Name
 				        </p>
 			        </div>
 		        </div>
 	    	</div>
-	    
+
 	    {%- include "nunjucks/partials/footer.njk" %}
 
 	    </div> <!-- /.main-container -->
-	    
+
 	{% endblock %}
