--- a/app/nunjucks/default.njk
+++ b/app/nunjucks/default.njk
@@ -5,7 +5,11 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dream Akasa</title>
-
+          {# {% if page == 'index' %} Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
+          {# {% if page == 'about' %} Who are we? | Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
+          {# {% if page == 'services' %} What can we help you with? | Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
+          {# {% if page == 'Interested with us?' %} What can we help you with? | Dream Akasa | We help companies from design to development with solution-by-design and human-centered approach. {% endif %} #}
+        </title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -41,7 +45,7 @@
         <script src="/bower_components/jquery/dist/jquery.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
-        
+
         <!-- build:js scripts/plugins.js -->
         <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
         <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
@@ -56,7 +60,7 @@
         <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
         <!-- endbuild -->
-        
+
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
