--- a/app/about.njk
+++ b/app/about.njk
@@ -6,7 +6,7 @@
 	    <div class="container-fluid main-container">
 	      	<div class="row section section--banner transparent text-center">
 	      		<div class="container">
-		      		<div class="col-md-10 col-md-offset-1">	
+		      		<div class="col-md-10 col-md-offset-1">
 				      	<h1 class="heading">Who are we?</h1>
 				        <h6 class="text">
 				        	We are team that solve problems by design. We solve problems and develop products using methods UX Driven Development, which is developing a product that adopts what is required by the user so that the product offered is more appropriate and well targeted. Our team have extraordinary members and also steps in solving your problem
@@ -176,7 +176,7 @@
 	    		<div class="container">
 			        <h4 class="heading text-left">Join our team!</h4>
 			        <h6 class="text m-b-2 col-sm-12 text-left">
-			        	Do you like teaching or learning or both ? Want to have more experience? Let’s join us!. Let us know about you by <a href="mailto:dreamakasa@gmail.com">email</a> and introduce yourself!
+			        	Do you like teaching or learning or both ? Want to have more experience? Let’s join us! Let us know about you by <a href="mailto:dreamakasa714@gmail.com">email</a> and introduce yourself!
 			        </h6>
 		        </div>
 	    	</div>
@@ -184,5 +184,5 @@
 	    {%- include "nunjucks/partials/footer.njk" %}
 
     	</div> <!-- /.main-container -->
-    		
+
 	{% endblock %}
