--- a/app/nunjucks/partials/footer.njk
+++ b/app/nunjucks/partials/footer.njk
@@ -18,23 +18,23 @@
   					<h4>
 						<span class="text">Interested to work with us? </span>
 						<button class="btn btn--orange animate--arrow-right hover--swipe-left">
-							GET IN TOUCH 
-	               			<span class="arrow"></span>
+							GET IN TOUCH
+	            <span class="arrow"></span>
 						</button>
 					</h4>
   				</div>
 	      		<div class="footer__nav col-sm-12 border-t-blue clearfix">
 					<ul class="list-group list-inline pull-left list-group--flush ">
 					   <li class="list-group-item">&copy; 2017 Dream Akasa</li>
-					   <li class="list-group-item">+62 8761 12121 <span>/</span> <a href="#">Contact Us</a></li>
+					   <li class="list-group-item">+62 8761 12121 <span>/</span> <a href="http://localhost:9001/contact.html">Contact Us</a></li>
 					</ul>
 					<ul class="list-group list-inline pull-right list-group--flush">
-					   <li class="list-group-item"><a href="#"><i class="fa fa-facebook-official"></i></a></li>
-					   <li class="list-group-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-					   <li class="list-group-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
-					   <li class="list-group-item"><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-					   <li class="list-group-item"><a href="#"><i class="fa fa-github-alt"></i></a></li>
-					   <li class="list-group-item"><a href="#"><i class="fa fa-dribbble"></i></a></li>
+					   <li class="list-group-item"><a target="blank" href="https://www.facebook.com/dreamakasa"><i class="fa fa-facebook-official"></i></a></li>
+					   <li class="list-group-item"><a target="blank" href="https://twitter.com/dreamakasa"><i class="fa fa-twitter"></i></a></li>
+					   <li class="list-group-item"><a target="blank" href="https://www.instagram.com/dreamakasa/"><i class="fa fa-instagram"></i></a></li>
+					   <li class="list-group-item"><a target="blank" href="https://www.linkedin.com/company/13219551/"><i class="fa fa-linkedin-square"></i></a></li>
+					   <li class="list-group-item"><a target="blank" href="https://github.com/dreamakasa"><i class="fa fa-github-alt"></i></a></li>
+					   <li class="list-group-item"><a target="blank" href="https://dribbble.com/dreamakasa"><i class="fa fa-dribbble"></i></a></li>
 					</ul>
 				</div>
 	      	</div>
