--- a/app/nunjucks/partials/header.njk
+++ b/app/nunjucks/partials/header.njk
@@ -1,6 +1,6 @@
 
 		<div class="header">
-			<h3 class="text-muted">yeoman nunjucks</h3>
+			<h3 class="text-muted">Dream Akasa</h3>
 			{% import "nunjucks/macros/navigation.njk" as navigation %}
 			{{ navigation.activePage('home') }}
 		</div>
